--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>ReuseTemplate</title>
+  <title>People Bank</title>
   <meta name="description" content="Use Case" />
   <base href="/">
   <!-- inline spinner styles to be able to display spinner right away -->
